--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.1",
+    "expr-eval": "^2.0.2",
+    "lodash": "^4.17.21",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "@types/react": "17.0.9",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.0",
