--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@heroicons/react": "^1.0.1",
     "expr-eval": "^2.0.2",
+    "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "@types/lodash": "^4.14.170",
     "@types/react": "17.0.9",
     "autoprefixer": "^10.2.6",
